WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311688
REGRESSION (
292858@main
): Pasting HTML renders sans-serif font as Times
https://bugs.webkit.org/show_bug.cgi?id=311688
Summary
REGRESSION (292858@main): Pasting HTML renders sans-serif font as Times
Tim Horton
Reported
2026-04-07 17:12:42 PDT
REGRESSION (
292858@main
): Pasting HTML renders sans-serif font as Times
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2026-04-07 17:12:43 PDT
<
rdar://problem/173162166
>
Tim Horton
Comment 2
2026-04-07 17:15:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62232
EWS
Comment 3
2026-04-07 18:27:52 PDT
Committed
310757@main
(b0139bf5a542): <
https://commits.webkit.org/310757@main
> Reviewed commits have been landed. Closing PR #62232 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug