REGRESSION (292858@main): Pasting HTML renders sans-serif font as Times https://bugs.webkit.org/show_bug.cgi?id=311688 rdar://173162166

Reviewed by Ryosuke Niwa and Aditya Keerthi.

292858@main removed the default initialization of the standard font families
in Settings, in favor of the code that syncs them from WebKit. This is fine,
except for disconnected Pages, which don't have WebKit backing them.

It turns out that SVGImage and other disconnected Pages already propagate
these settings from the parent context, but the paste sanitization page
did not! This would *still* be fine, as the generic font family name
survives sanitization, but in the process, it pollutes the FontCascadeCache
with the incorrect family, and the cache keying is such that the invalid
entry persists and infects the parent context (if this is the first time
it's been encountered).

Fix this by propagating the generic font families into the paste sanitization
page just like we do for SVGImage.

Test: editing/pasteboard/paste-style-block-generic-font-family.html

* LayoutTests/editing/pasteboard/paste-style-block-generic-font-family-expected.html: Added.
* LayoutTests/editing/pasteboard/paste-style-block-generic-font-family.html: Added.
* Source/WebCore/editing/markup.cpp:
(WebCore::createPageForSanitizingWebContent):

Canonical link: https://commits.webkit.org/310757@main